--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -44,7 +44,7 @@
               <input type="password" id="password" class="input2-box" placeholder="Password">
             </label>
           </div>
-          <button type="button" class="button">Forget password?</button>
+          <button type="button" class="button" onclick="alert('Bạn bị quên mật khẩu? \nĐể khôi phục đăng nhập vui liên hệ bộ phận hỗ trợ kĩ thuật của Anh Huy Auto: \nEmail: anhhuyauto88engineering@gmail.com \nHotline: 0888.666.888')">Forget password?</button>
         </div>
         <button type="submit" class="button-3">Sign In</button>
       </form>
