--- a/Frontend/detailCar.html
+++ b/Frontend/detailCar.html
@@ -99,7 +99,7 @@
             </div>
         </div>
         <div class="description">
-            <p>Toyota Vios 1.5G-CVT là phiên bản cao cấp nhất trong dòng sedan hạng B của Toyota, nổi bật với thiết kế sang trọng, trang bị tiện nghi và khả năng vận hành vượt trội. Xe sử dụng động cơ 1.5L mạnh mẽ kết hợp với hộp số tự động vô cấp CVT, mang lại trải nghiệm lái êm ái, mượt mà và tiết kiệm nhiên liệu. Về ngoại thất, Vios 1.5G-CVT sở hữu cụm đèn LED hiện đại, gương chiếu hậu chỉnh điện tích hợp báo rẽ và bộ mâm hợp kim 16 inch khỏe khoắn. Nội thất xe được trang bị ghế da cao cấp, vô lăng bọc da tích hợp các nút điều khiển, màn hình giải trí cảm ứng 7 inch hỗ trợ Apple CarPlay/Android Auto và điều hòa tự động. Bên cạnh đó, xe còn được trang bị hệ thống an toàn tiên tiến gồm 7 túi khí, cân bằng điện tử, hỗ trợ khởi hành ngang dốc, cảm biến lùi và camera lùi. Với những trang bị hiện đại và độ bền bỉ đặc trưng của Toyota, Vios 1.5G-CVT là lựa chọn lý tưởng cho người dùng yêu thích sự tiện nghi, an toàn và đẳng cấp.
+            <p id = 'description'>
             </p>
         </div>
         <div class="img-library">
