--- a/Frontend/manager.html
+++ b/Frontend/manager.html
@@ -30,6 +30,7 @@
                 <button class="btn-menu" onclick="loadPage('dashboard.html')">Dashboard</button>
                 <button class="btn-menu" onclick="loadPage('customersManager.html'); waitForInitHtml()">Customers Manager</button>
                 <button class="btn-menu" onclick="loadPage('carsManager.html')">Cars Manager</button>
+                <button class="btn-menu" onclick="loadPage('order.html')">Orders Manager</button>
                 <button class="btn-menu" onclick="window.location.href='index.html'">Return Home</button>
             </div>
         </div>
